{
    "name": "PlayerInput 1",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "85abc30a-1fb2-42b5-b321-a98983c90255",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "8c710dca-dc8b-4840-b39b-b13674b4218a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "PassThrough",
                    "id": "7c4713a2-15d7-445f-85df-1d376d319265",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MeleeAttack",
                    "type": "PassThrough",
                    "id": "b7ff0c40-930a-4ad7-8040-a9d846b3ee39",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7453c558-b8b8-4029-9f98-2807ad0804a6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0173999a-e005-4140-94bc-47419d9351e8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "890106a9-6682-4996-94e0-408a244d8be0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "91e4454b-baa7-4701-badc-d530bd812b50",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "62e9e872-747d-422b-8e18-132f77a23ed6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "43f10c62-0ed7-4e69-a484-a52bbf8128e1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5226547b-f716-4ab4-b7b2-8eecb4e699dc",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}